# ai_voice_bot

./: .gitignore  ai_bot.py  ai_cons.py  ai_voice_bot.py  ai_voice_bot_v2.py  pyproject.toml  voice_bot.py  zerobot.py
